gccida/g0/constrain_operands
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:2791:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class classa; // [rsp+30Ch] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:2793:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+314h] [rbp-4Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:2809:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !recog_data_0.n_operands || !recog_data_0.n_alternatives ) 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:2809:35: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !recog_data_0.n_operands || !recog_data_0.n_alternatives ) 
                                  ^~~~~~~~~~~~
                                  recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:2811:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( c = 0; c < recog_data_0.n_operands; ++c ) 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:2813:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
constraints[c] = recog_data_0.constraints[c]; 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:2820:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( opno = 0; opno < recog_data_0.n_operands; ++opno ) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:2822:12: error: expected identifier or '('
 struct op = recog_data_0.operand[opno]; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:2829:2: error: expected expression
 struct op = op->fld[0].rtx; 
 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:2835:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( op->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:2837:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)op + 2)); 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:2838:12: error: expected identifier or '('
 struct op = op->fld[0].rtx; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:2875:2: error: expected expression
 struct match = strtoul( p - 1, &end, 10); 
 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:2879:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
op1 = recog_data_0.operand[match]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:2880:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
op2 = recog_data_0.operand[opno]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:3036:46: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( strict <= 0 || strict_memory_address_p( recog_data_0.operand_mode[opno], op) ) 
                                             ^~~~~~~~~~~~
                                             recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:3163:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( eopno = 0; eopno < recog_data_0.n_operands; ++eopno ) 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:3165:40: error: use of undeclared identifier 'recog_data_0'
if ( earlyclobber[eopno] && *( _WORD *)recog_data_0.operand[eopno] == 61 ) 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:3167:28: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( opno_0 = 0; opno_0 < recog_data_0.n_operands; ++opno_0 ) 
                           ^~~~~~~~~~~~
                           recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/constrain_operands/src/obj/recog.o] Error 1
